.opsera-sperigpt4/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-sperigpt4-dev
  labels:
    app: sperigpt4
    tenant: opsera
    managed-by: argocd
